# neural-networks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
config/: asr.yaml  lm.yaml  mt.yaml
docker/: Dockerfile
neural_networks/: trainer.py
neural_networks/modules/: conformer.py  frontend.py  joiner.py  predictor.py  transducer.py  transformer.py
neural_networks/tasks/: trainer.py
neural_networks/tasks/asr/: collate_fn.py  dataset.py  evaluate.py  model.py  sampler.py  train.py
neural_networks/tasks/lm/: collate_fn.py  dataset.py  evaluate.py  model.py  train.py
neural_networks/tasks/mt/: collate_fn.py  dataset.py  evaluate.py  model.py  train.py
neural_networks/tasks/token/: sentencepiece_tokenizer.py
neural_networks/tasks/txt/: tokenizer.py
neural_networks/utils/: attention_mask.py  config.py  ddp.py  mask.py  tokenizer.py  trainer.py
scripts/asr/: download.sh  evaluate.py  preprocess.py  run.sh  train.py
scripts/lm/: download.sh  evaluate.py  preprocess.py  run.sh  train.py
scripts/mt/: download.sh  evaluate.py  preprocess.py  run.sh  train.py
tests/: test_trainer.py
tests/modules/: test_conformer.py  test_frontend.py  test_joiner.py  test_tokenizer.py  test_transducer.py  test_transformer.py
tests/tasks/asr/: test_collate_fn.py  test_dataset.py  test_model.py  test_sampler.py
tests/tasks/lm/: test_collate_fn.py  test_dataset.py  test_model.py
tests/utils/: test_attention_mask.py  test_config.py  test_mask.py  test_tokenizer.py  test_trainer.py
(+10 files in other folders)
